--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+body {
+    background: #E3E1DB;
+    font-family: sans-serif;
+}
+
 .header__image {
     height: 4rem;
+}
+a {
+    text-decoration: none;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+.nav__item {
+    font-weight: 500;
+    
 }
