--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 8fr 1fr;
+    grid-template-rows: 1fr 8fr 1.75fr;
     height: 100vh;
 }
 
@@ -15,13 +15,21 @@ a {
     text-decoration: none;
 }
 
+p {
+    margin: 0;
+}
+
 ul {
     margin: 0;
     padding: 0;
 }
 
 hr {
-    
+    border: 5px solid #4d4c8a;
+    border-radius: 1rem;
+    width: 90vw;
+    opacity: 1;
+    margin: 0;
 }
 
 .nav__item {
@@ -35,6 +43,13 @@ hr {
 
 .main__section {
     width: 80vw;
+}
+
+.footer__paragraph {
+    background: #4c4b89;
+    border: 1px solid #000;
+    padding: 0.5rem;
+    color: #fff;
 }
 
 @media (max-width: 576px) {
